scrolling overflow fixes and layout update

--- a/components/STT/STT.module.css
+++ b/components/STT/STT.module.css
@@ -1,6 +1,6 @@
 .main {
     width: 90%;
-    min-height: 95vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
